add loadingbar and bedrock compatability
